fix to alignment of carousel on smaller devices

--- a/src/styles/modules/_carousel.scss
+++ b/src/styles/modules/_carousel.scss
@@ -1,5 +1,5 @@
 .carousel {
-    flex: 0 0 column('1/2');
+    flex: 0 1 column('1/2');
     position: relative;
 
     &__slide {
