--- a/src/styles/modules/_copy.scss
+++ b/src/styles/modules/_copy.scss
@@ -20,5 +20,6 @@
 
   &--frontend {
     transition: background-color .4s linear;
+    margin-bottom: rem(40);
   }
 }
